Add Google Site Verification Meta Tag

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -28,6 +28,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="iRead" />
     <meta property="og:image:type" content="image/jpg" />
+    <meta name="google-site-verification" content="kCaDsevOB107PNa52WhEleNVU7IrF7zFpT4prbTqrqM" />
     <link
       rel="shortcut icon"
       type="image/png"
