--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -217,4 +217,9 @@
     })
     })
   </script>
+  
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/show-language/prism-show-language.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/download-button/prism-download-button.js"></script>
+    
 {% endblock js_down %}
