Fix about, sponsor pages

--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -11,8 +11,7 @@
             
             <div class="row">
               <div class="col-md-12">
-                <h2 class="mb-5 text-center">Hi There! I'm Ashutosh Krishna</h2>
-                <p class="mb-5 text-center"><img src="{% static 'images/dp.jpg' %}" alt="Image placeholder" class="img-fluid" width="402" height="402"></p>
+                <p class="mb-5 text-center"><img src="{% static 'images/favicon.png' %}" alt="Image placeholder" class="img-fluid" width="202" height="202"></p>
                 <p>The best ideas can change who we are. iRead is where those ideas take shape, take off, and spark powerful conversations. We’re an open platform where readers can come to find insightful and dynamic thinking. Here, expert and undiscovered voices alike dive into the heart of any topic and bring new ideas to the surface. Our purpose is to spread these ideas and deepen understanding of the world.</p>
                 <p>We’re creating a new model for digital publishing. One that supports nuance, complexity, and vital storytelling without giving in to the incentives of advertising. It’s an environment that’s open to everyone but promotes substance and authenticity. And it’s where deeper connections forged between readers and writers can lead to discovery and growth. Together with millions of collaborators, we’re building a trusted and vibrant ecosystem fueled by important ideas and the people who think about them.</p>
                 <p>Anyone can write on iRead. Thought-leaders, journalists, experts, and individuals with unique perspectives share their thinking here. You’ll find pieces by independent writers from around the globe, stories we feature and leading authors, and smart takes on our own suite of blogs and publications.</p>
