--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -321,7 +321,8 @@
                             <div class="post-meta">
                               <span class="mr-2"
                                 >{{post.timestamp|date:"F d Y"}}</span
-                              >
+                              >&bullet;
+                              <span class="mr-2">{{post.content|readtime}}</span>
                             </div>
                           </div>
                         </a>
