--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load custom_tags %}
 {% load static %}
 {% block title %}{{user.get_full_name}}{% endblock title %}
 
@@ -117,6 +118,7 @@
                           <span class="mr-2">{{post.timestamp|date:"F d Y"}}</span>&bullet;
                           {% if request.session.user_id %}
                             <span class="mr-2">{{post.categories.name}}</span>&bullet;
+                            <span class="mr-2">{{post.content|readtime}}</span>
                             {% if request.session.user_id == post.author.id %}
                               <span class="mr-2">
                                 {% if post.published %}
