--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load custom_tags %}
 {% load static %}
 {% block title %}{{query}}{% endblock title %}
 
@@ -57,7 +58,8 @@
                       <div class="post-meta">
                         <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.get_full_name}}</span>&bullet;
                         <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span> &bullet;
-                        <span class="mr-2">{{post.categories.name}}</span>
+                        <span class="mr-2">{{post.categories.name}}</span>&bullet;
+                        <span class="mr-2">{{post.content|readtime}}</span>
                       </div>
                       <h2>{{post.title}}</h2>
                     </span>
