--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load custom_tags %}
 {% load static %}
 {% block title %}{{tag.name}}{% endblock title %}
 
@@ -24,7 +25,8 @@
                     <span class="text">
                       <div class="post-meta">
                         <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.get_full_name}}</span>&bullet;
-                        <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
+                        <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>&bullet;
+                        <span class="mr-2">{{post.content|readtime}}</span>
                       </div>
                       <h2>{{post.title}}</h2>
                     </span>
