--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -85,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/command-line/prism-command-line.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/line-numbers/prism-line-numbers.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/toolbar/prism-toolbar.js"></script>
-    
+    <script data-ad-client="ca-pub-8354103933180400" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% block js_up %}
       
     {% endblock js_up %}
