Add URL Shortener in Copy Link

--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -70,7 +70,7 @@
             <a href="#" class="whatsapp-btn" target="_blank">
               <i class="fa fa-whatsapp"></i>
             </a> &nbsp;
-            <a onclick="copyLink(`{{request.build_absolute_uri}}`)" style="cursor: pointer;" class="copy-btn">
+            <a onclick="copyLink(`{{request.build_absolute_uri}}`, `{{shorty_api_key}}`)" style="cursor: pointer;" class="copy-btn">
               <i class="fa fa-link" aria-hidden="true"></i>
             </a> &nbsp;
           </h4>
