--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -51,6 +51,7 @@
                                 class="passwordFeedBackArea invalid-feedback"
                                 style="display: none"
                             ></div>
+                            <button type="submit" class="btn btn-success mt-3" id="changePasswordBtn">Change Password</button>
                         </div>
                     </div>
                 </form>
