--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -379,13 +379,7 @@
               <p class="small">
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
-                <script
-                  data-cfasync="false"
-                  src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-                ></script>
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
+                2021<script>new Date().getFullYear()>2021&&document.write("-"+new Date().getFullYear());</script>,
                 All Rights Reserved <br />
                 This template is made with
                 <i class="fa fa-heart text-danger" aria-hidden="true"></i> by
